--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\CM\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\chris.mclean\\Anaconda3\\python.exe"
 }
